# internal/model/utils.go
@@ -1,0 +1,43 @@
+/**
+ * Copyright 2023-present Coinbase Global, Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *  http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package model
+
+import (
+	"crypto/md5"
+	"fmt"
+	"strings"
+)
+
+var delim = "#"
+
+func GenerateAccountId(userId string, currency string) string {
+	return generateEntityId("account", userId, currency)
+}
+
+func GenerateTransactionId(venueOrderId string) string {
+	return generateEntityId("transaction", venueOrderId)
+}
+
+func GenerateFillId(venueOrderId string, fillId string) string {
+	return generateEntityId("fill", venueOrderId, fillId)
+}
+
+func generateEntityId(entityType string, params ...string) string {
+	hashedBytes := md5.Sum([]byte(strings.Join(params, delim)))
+	hashedString := fmt.Sprintf("%x", hashedBytes)
+	return strings.Join([]string{entityType, hashedString}, delim)
+}
